add novos projetos e alguns ajustes

--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
     <!-- meta tags essenciais -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Gilberto Lopes</title>
+    <title>Gilberto Lopes | Dev</title>
     <meta name="description" content="Gilberto Lopes - Fullstack developer 💻">
     <!-- meta tags para redes sociais -->
     <meta property="og:title" content="Gilberto Lopes">
     <meta property="og:description" content="Gilberto Lopes - Fullstack developer 💻">
     <meta property="og:image" content="./src/public/assets/img/dev.png">
-    <meta property="og:url" content="https://developer-gilberto.github.io/portifolio-gilberto/">
+    <meta property="og:url" content="https://gilbertolopes.dev">
     <meta property="og:site_name" content="Portfolio Gilberto Lopes">
     <meta property="og:type" content="website">
     <meta property="article:author" content="Gilberto Lopes">
@@ -18,7 +18,7 @@
     <!-- meta tag para mecanismos de busca (bot do google) -->
     <meta name="robots" content="index, follow">
     <!-- favicon -->
-    <link rel="shortcut icon" href="./src/public/assets/icons/favicon/favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="./src/public/assets/icons/favicon_io/favicon.ico" type="image/x-icon">
     <!-- CSS -->
     <link rel="stylesheet" href="./src/public/css/style_desktop.css">
     <link rel="stylesheet" href="./src/public/css/style_mobile.css" media="screen">
@@ -149,8 +149,8 @@
             <p class="eu-sou">Eu sou</p>
             <h1 class="gilberto-lopes">Gilberto Lopes</h1>
             <p class="full-stack">
-                <span class="chaves-full-stack">{</span> 
-                        Full stack developer 
+                <span class="chaves-full-stack">{</span>
+                        Full stack developer
                 <span class="chaves-full-stack">}</span>
             </p>
             <div class="container-tecnologias">
@@ -161,7 +161,7 @@
             </div>
             <img class="img-dev-home" src="./src/public/assets/img/dev.png" alt="Developer">
         </section>
-        
+
         <!-- SECTION SOBRE MIM -->
         <section id="sobre-mim">
             <h2>SOBRE MIM</h2>
@@ -170,17 +170,17 @@
                     <h3>👋 Olá<span class="user-name"></span>, meu nome é Gilberto Lopes</h3>
                     <div class="container-img-developer">
                         <img class="img-dev-sobremim" src="./src/public/assets/img/dev.png" alt="Developer">
-                        <p>Estou estudando para realizar o maior sonho da minha vida, que é me tornar um programador.</p>
+                        <p>Desenvolvedor web full stack.</p>
                     </div><br>
                     <p>
-                        Atualmente, estou me dedicando a estudar programação por conta própria, utilizando recursos da internet como cursos, documentações e tutoriais. Futuramente, quando estiver trabalhando como programador, pretendo fazer curso superior e inglês para obter mais conhecimento.
+                        Estou estudando programação para realizar o maior sonho da minha vida: me tornar um programador profissional e trabalhar com tecnologia.
                     </p>
                     <p>
-                        Embora ainda esteja no início da minha caminhada até me tornar um programador, gostaria de ter uma oportunidade para aprimorar minhas habilidades técnicas, aplicar meus conhecimentos em projetos reais junto com outros desenvolvedores, contribuindo com minhas ideias, validando meus conhecimentos e também aprender com outros desenvolvedores.
+                        Desde que tive contato com meu primeiro computador, fui curioso sobre como as coisas funcionam. Hoje, transformo essa curiosidade em solucões. Misturando paixão com código e transformando problemas reais em solucões.
                     </p><br>
                     <p>
-                        <blockquote>💬 "Entender como o computador funciona, o que acontece, como acontece e principalmente, como é feito as coisas por trás da tela deste dispositivo que você está lendo neste exato momento. Poder me comunicar com o computador através de linguagens de códigos complexos que somente eu e ele entendemos. Programá-lo para que resolva problemas complexos da vida real por mim. Isso é fascinante! Isso é <strong>programação</strong>."</blockquote>
-                        <cite>Lopes, Gilberto 2023</cite>
+                        <blockquote>🧐 "Entender como o computador funciona, o que acontece, como acontece e principalmente, como é feito as coisas por trás da tela deste dispositivo que você está lendo neste exato momento. Poder me comunicar com o computador através de linguagens de códigos complexos que somente eu e ele entendemos. Programá-lo para que resolva problemas complexos da vida real por mim. Isso é FASCINANTE! Isso é ser <strong>PROGRAMADOR</strong>." 🧑‍💻</blockquote>
+                        <cite>💬 Lopes, Gilberto 2023.</cite>
                     </p>
                 </div>
                 <div class="container-img-sobremim">
@@ -208,13 +208,11 @@
                     <h3>🤝 Soft Skills</h3>
                     <div>
                         <ul>
-                            <li>Facilidade de comunicação</li>
-                            <li>Responsabilidade</li>
+                            <li>Facilidade em me relacionar com pessoas</li>
+                            <li>Responsável</li>
                             <li>Trabalho em equipe</li>
                             <li>Comunicativo</li>
-                            <li>Compromisso</li>
-                            <li>Facilidade em aprender</li>
-                            <li>Curiosidade</li>
+                            <li>Curioso</li>
                             <li>Vontade de aprender</li>
                         </ul>
                     </div>
@@ -225,8 +223,44 @@
         <!-- SECTION PROJETOS -->
         <section id="projetos">
             <h2>PROJETOS</h2>
-            <p>Então<span class="user-name"></span>, aqui você encontra alguns dos projetos que fiz com o objetivo de <em>validar</em> e <em>praticar</em> os conhecimentos que estou adquirindo. Clique em "Visitar projeto" para acessar o deploy do projeto ou, caso queira analisar o código e saber como o projeto foi feito, clique em "Código fonte". Observação: <strong class="projetos_responsivos">Todos os projetos são responsivos.</strong></p>
+            <p>Então<span class="user-name"></span>, aqui você encontra alguns dos projetos que fiz com o objetivo de <em>praticar</em> e <em>validar</em> meus conhecimentos em programação. Clique em "Visitar projeto" para acessar o deploy do projeto ou, caso queira analisar o código e saber como o projeto foi desenvolvido, clique em "Código fonte". <strong class="projetos_responsivos">Todos os projetos são responsivos.</strong></p>
             <div class="container-projetos">
+                <div class="card-projetos">
+                    <h3>ShopTurbo</h3>
+                    <div>
+                        <i class="ri-html5-fill bx orange5 bxl-html5"></i>
+                        <i class="ri-css3-fill bx blue3 bxl-css3"></i>
+                        <i class="ri-javascript-fill bx bxl-javascript"></i>
+                    </div>
+                    <div class="iphone">
+                        <img src="./src/public/assets/img/shopturbo-print.png" alt="ShopTurbo">
+                    </div>
+                    <a href="https://shopturbo.gilbertolopes.dev/" target="_blank" rel="noopener noreferrer">
+                        <i class="ri-external-link-line bx-link-external"></i>Visitar projeto
+                    </a>
+                    <a href="https://github.com/developer-gilberto/shopturbo" target="_blank" rel="noopener noreferrer">
+                        <i class="ri-code-s-slash-line bx-code-alt"></i>
+                        Código fonte
+                    </a>
+                </div>
+                <div class="card-projetos">
+                    <h3>API ShopTurbo</h3>
+                    <div>
+                        <i class="ri-html5-fill bx orange5 bxl-html5"></i>
+                        <i class="ri-css3-fill bx blue3 bxl-css3"></i>
+                        <i class="ri-javascript-fill bx bxl-javascript"></i>
+                    </div>
+                    <div class="iphone">
+                        <img src="./src/public/assets/img/shopturbo-api.png" alt="API-ShopTurbo">
+                    </div>
+                    <a href="https://shopturbo-api.gilbertolopes.dev/" target="_blank" rel="noopener noreferrer">
+                        <i class="ri-external-link-line bx-link-external"></i>Visitar projeto
+                    </a>
+                    <a href="https://github.com/developer-gilberto/shopturbo-server" target="_blank" rel="noopener noreferrer">
+                        <i class="ri-code-s-slash-line bx-code-alt"></i>
+                        Código fonte
+                    </a>
+                </div>
                 <div class="card-projetos">
                     <h3>Calculadora</h3>
                     <div>
@@ -255,7 +289,7 @@
                     <div class="iphone">
                         <img src="./src/public/assets/img/portfolio_gilberto.png" alt="Portifólio Gilberto">
                     </div>
-                    <a href="#home">
+                    <a href="https://portfolio.gilbertolopes.dev" target="_blank" rel="noopener noreferrer">
                         <i class="ri-external-link-line bx-link-external"></i>
                         Visitar projeto
                     </a>
