add novos projetos e alguns ajustes

--- a/index.html
+++ b/index.html
@@ -154,10 +154,7 @@
                 <span class="chaves-full-stack">}</span>
             </p>
             <div class="container-tecnologias">
-                <i class="ri-html5-fill bx"></i>
-                <i class="ri-css3-fill bx"></i>
-                <i class="ri-javascript-fill bx"></i>
-                <img class="node_36x36px" src="./src/public/assets/icons/icons_SVG/nodejs-icon-blue36x36.svg" alt="Node.js">
+                <i class="ri-code-fill bx"></i>
             </div>
             <img class="img-dev-home" src="./src/public/assets/img/dev.png" alt="Developer">
         </section>
@@ -173,13 +170,13 @@
                         <p>Desenvolvedor web full stack.</p>
                     </div><br>
                     <p>
-                        Estou estudando programação para realizar o maior sonho da minha vida: me tornar um programador profissional e trabalhar com tecnologia.
+                        Estou estudando programação para realizar o maior sonho da minha vida: me tornar um programador profissional e trabalhar com desenvolvimento de software.
                     </p>
                     <p>
-                        Desde que tive contato com meu primeiro computador, fui curioso sobre como as coisas funcionam. Hoje, transformo essa curiosidade em solucões. Misturando paixão com código e transformando problemas reais em solucões.
+                        Estou sempre buscando evoluir e aprender através de projetos práticos, estudo constante e boas práticas de desenvolvimento. Me considero desenvolvedor web fullstack, com um carinho especial ao backend.
                     </p><br>
                     <p>
-                        <blockquote>🧐 "Entender como o computador funciona, o que acontece, como acontece e principalmente, como é feito as coisas por trás da tela deste dispositivo que você está lendo neste exato momento. Poder me comunicar com o computador através de linguagens de códigos complexos que somente eu e ele entendemos. Programá-lo para que resolva problemas complexos da vida real por mim. Isso é FASCINANTE! Isso é ser <strong>PROGRAMADOR</strong>." 🧑‍💻</blockquote>
+                        <blockquote>🧐 "Entender como é feito as coisas por trás da tela deste dispositivo que você está lendo neste exato momento. Poder me comunicar com o computador através de códigos que somente eu e ele entendemos. Programá-lo para que resolva problemas complexos da vida real por mim. Isso é FASCINANTE! Isso é ser <strong>PROGRAMADOR</strong>." 🧑‍💻</blockquote>
                         <cite>💬 Lopes, Gilberto 2023.</cite>
                     </p>
                 </div>
@@ -196,24 +193,97 @@
                 <div class="container-hard-skills">
                     <h3>💻 Hard Skills</h3>
                     <div class="container-icons-skills">
-                        <i id="html" class="ri-html5-fill bx"></i>
-                        <i id="css" class="ri-css3-fill bx"></i>
-                        <i id="js" class="ri-javascript-fill bx"></i>
-                        <img id="node" class="node_36x36px" src="./src/public/assets/icons/icons_SVG/nodejs-icon-green96x96.svg" alt="Node.js">
-                        <img id="git" src="./src/public/assets/icons/icons_SVG/git-icon.svg" alt="Git">
-                        <img src="./src/public/assets/icons/icons_SVG/linux-tux-icon.svg" alt="linux" class="tux">
+                        <div class="container-icon-title">
+                            <img class="icons-hardskills" src="./src/public/assets/icons/icons_SVG/typescript-official-svgrepo-com.svg" alt="TypeScript">
+                            <span>TypeScript</span>
+                        </div>
+                        <div class="container-icon-title">
+                          <img class="icons-hardskills" src="./src/public/assets/icons/icons_SVG/javascript-svgrepo-com.svg" alt="JavaScript">
+                            <span>JavaScript</span>
+                        </div>
+                        <div class="container-icon-title">
+                          <img class="icons-hardskills" src="./src/public/assets/icons/icons_SVG/html-5-svgrepo-com.svg" alt="html">
+                            <span>HTML</span>
+                        </div>
+                        <div class="container-icon-title">
+                          <img class="icons-hardskills" src="./src/public/assets/icons/icons_SVG/css-svgrepo-com.svg" alt="css">
+                            <span>CSS</span>
+                        </div>
+                        <div class="container-icon-title">
+                          <img class="icons-hardskills" src="./src/public/assets/icons/icons_SVG/react-svgrepo-com.svg" alt="ReactJS">
+                            <span>React</span>
+                        </div>
+                        <div class="container-icon-title">
+                          <img class="icons-hardskills" src="./src/public/assets/icons/icons_SVG/nextjs-icon-svgrepo-com2.svg" alt="NextJS">
+                            <span>NextJS</span>
+                        </div>
+                        <div class="container-icon-title">
+                          <img class="icons-hardskills" src="./src/public/assets/icons/icons_SVG/node-svgrepo-com.svg" alt="NodeJS">
+                            <span>NodeJS</span>
+                        </div>
+                        <div class="container-icon-title">
+                          <img class="icons-hardskills" src="./src/public/assets/icons/icons_SVG/express-svgrepo-com.svg" alt="Express">
+                            <span>Express</span>
+                        </div>
+                        <div class="container-icon-title">
+                          <img class="icons-hardskills" src="./src/public/assets/icons/icons_SVG/tailwindcss-icon-svgrepo-com.svg" alt="TailwindCSS">
+                            <span>TailwindCSS</span>
+                        </div>
+                        <div class="container-icon-title">
+                          <img class="icons-hardskills" src="./src/public/assets/icons/icons_SVG/handlebars-svgrepo-com.svg" alt="Handlebars">
+                            <span>Handlebars</span>
+                        </div>
+                        <div class="container-icon-title">
+                          <img class="icons-hardskills" src="./src/public/assets/icons/icons_SVG/rest.png" alt="API REST">
+                            <span>API REST</span>
+                        </div>
+                        <div class="container-icon-title">
+                          <img class="icons-hardskills" src="./src/public/assets/icons/icons_SVG/jwt.svg" alt="JWT">
+                            <span>JWT</span>
+                        </div>
+                        <div class="container-icon-title">
+                          <img class="icons-hardskills" src="./src/public/assets/icons/icons_SVG/oauth-svgrepo-com.svg" alt="OAuth">
+                            <span>OAuth</span>
+                        </div>
+                        <div class="container-icon-title">
+                          <img class="icons-hardskills" src="./src/public/assets/icons/icons_SVG/docker-svgrepo-com.svg" alt="Docker">
+                            <span>Docker</span>
+                        </div>
+                        <div class="container-icon-title">
+                          <img class="icons-hardskills" src="./src/public/assets/icons/icons_SVG/linux-svgrepo-com.svg" alt="Linux">
+                            <span>Linux</span>
+                        </div>
+                        <div class="container-icon-title">
+                          <img class="icons-hardskills" src="./src/public/assets/icons/icons_SVG/sql-database-generic-svgrepo-com.svg" alt="SQL">
+                            <span>SQL</span>
+                        </div>
+                        <div class="container-icon-title">
+                          <img class="icons-hardskills" src="./src/public/assets/icons/icons_SVG/redis-svgrepo-com.svg" alt="Redis">
+                            <span>Redis</span>
+                        </div>
+                        <div class="container-icon-title">
+                          <img class="icons-hardskills" src="./src/public/assets/icons/icons_SVG/light-prisma-svgrepo-com.svg" alt="Prisma">
+                            <span>Prisma ORM</span>
+                        </div>
+                        <div class="container-icon-title">
+                          <img class="icons-hardskills" src="./src/public/assets/icons/icons_SVG/git-svgrepo-com.svg" alt="Git">
+                            <span>Git</span>
+                        </div>
+                        <div class="container-icon-title">
+                          <img class="icons-hardskills" src="./src/public/assets/icons/icons_SVG/github-svgrepo-com.svg" alt="Github">
+                            <span>GitHub</span>
+                        </div>
                     </div>
                 </div>
                 <div class="container-soft-skills">
-                    <h3>🤝 Soft Skills</h3>
+                    <h3>👍 Soft Skills</h3>
                     <div>
                         <ul>
-                            <li>Facilidade em me relacionar com pessoas</li>
-                            <li>Responsável</li>
-                            <li>Trabalho em equipe</li>
-                            <li>Comunicativo</li>
-                            <li>Curioso</li>
-                            <li>Vontade de aprender</li>
+                            <li>🤝 Facilidade em me relacionar com pessoas</li>
+                            <li>💬 Comunicativo</li>
+                            <li>🎯 Compromisso</li>
+                            <li>🛡️ Responsabilidade</li>
+                            <li>🧐 Vontade de aprender</li>
                         </ul>
                     </div>
                 </div>
@@ -223,14 +293,14 @@
         <!-- SECTION PROJETOS -->
         <section id="projetos">
             <h2>PROJETOS</h2>
-            <p>Então<span class="user-name"></span>, aqui você encontra alguns dos projetos que fiz com o objetivo de <em>praticar</em> e <em>validar</em> meus conhecimentos em programação. Clique em "Visitar projeto" para acessar o deploy do projeto ou, caso queira analisar o código e saber como o projeto foi desenvolvido, clique em "Código fonte". <strong class="projetos_responsivos">Todos os projetos são responsivos.</strong></p>
+            <p>Então<span class="user-name"></span>, aqui você encontra alguns dos projetos que fiz com o objetivo de <em>praticar</em> e <em>validar</em> meus conhecimentos em programação. Clique em "Visitar projeto" para acessar o deploy do projeto ou, caso queira analisar o código e saber como o projeto foi desenvolvido, clique em "Código fonte". <strong class="projetos_responsivos">Todos os projetos são responsivos.</strong> exceto o shopturbo que ainda está em desenvolvimento.</p>
             <div class="container-projetos">
                 <div class="card-projetos">
-                    <h3>ShopTurbo</h3>
+                    <h3>ERP ShopTurbo</h3>
                     <div>
-                        <i class="ri-html5-fill bx orange5 bxl-html5"></i>
+                        <!--<i class="ri-html5-fill bx orange5 bxl-html5"></i>
                         <i class="ri-css3-fill bx blue3 bxl-css3"></i>
-                        <i class="ri-javascript-fill bx bxl-javascript"></i>
+                        <i class="ri-javascript-fill bx bxl-javascript"></i>-->
                     </div>
                     <div class="iphone">
                         <img src="./src/public/assets/img/shopturbo-print.png" alt="ShopTurbo">
@@ -246,9 +316,9 @@
                 <div class="card-projetos">
                     <h3>API ShopTurbo</h3>
                     <div>
-                        <i class="ri-html5-fill bx orange5 bxl-html5"></i>
+                        <!--<i class="ri-html5-fill bx orange5 bxl-html5"></i>
                         <i class="ri-css3-fill bx blue3 bxl-css3"></i>
-                        <i class="ri-javascript-fill bx bxl-javascript"></i>
+                        <i class="ri-javascript-fill bx bxl-javascript"></i>-->
                     </div>
                     <div class="iphone">
                         <img src="./src/public/assets/img/shopturbo-api.png" alt="API-ShopTurbo">
@@ -262,11 +332,29 @@
                     </a>
                 </div>
                 <div class="card-projetos">
+                    <h3>Funny rede social</h3>
+                    <div>
+                        <!--<i class="ri-html5-fill bx orange5 bxl-html5"></i>
+                        <i class="ri-css3-fill bx blue3 bxl-css3"></i>
+                        <i class="ri-javascript-fill bx bxl-javascript"></i>-->
+                    </div>
+                    <div class="iphone">
+                        <img src="./src/public/assets/img/funny.png" alt="Funny">
+                    </div>
+                    <a href="https://funny.gilbertolopes.dev" target="_blank" rel="noopener noreferrer">
+                        <i class="ri-external-link-line bx-link-external"></i>Visitar projeto
+                    </a>
+                    <a href="https://github.com/developer-gilberto/Funny-rede-social" target="_blank" rel="noopener noreferrer">
+                        <i class="ri-code-s-slash-line bx-code-alt"></i>
+                        Código fonte
+                    </a>
+                </div>
+                <div class="card-projetos">
                     <h3>Calculadora</h3>
                     <div>
-                        <i class="ri-html5-fill bx orange5 bxl-html5"></i>
+                        <!--<i class="ri-html5-fill bx orange5 bxl-html5"></i>
                         <i class="ri-css3-fill bx blue3 bxl-css3"></i>
-                        <i class="ri-javascript-fill bx bxl-javascript"></i>
+                        <i class="ri-javascript-fill bx bxl-javascript"></i>-->
                     </div>
                     <div class="iphone">
                         <img src="./src/public/assets/img/calculadora_JS.png" alt="calculadora">
@@ -282,9 +370,9 @@
                 <div class="card-projetos">
                     <h3>Portifólio Gilberto</h3>
                     <div>
-                        <i class="ri-html5-fill bx orange5 bxl-html5"></i>
+                        <!--<i class="ri-html5-fill bx orange5 bxl-html5"></i>
                         <i class="ri-css3-fill bx blue3 bxl-css3"></i>
-                        <i class="ri-javascript-fill bx bxl-javascript"></i>
+                        <i class="ri-javascript-fill bx bxl-javascript"></i>-->
                     </div>
                     <div class="iphone">
                         <img src="./src/public/assets/img/portfolio_gilberto.png" alt="Portifólio Gilberto">
@@ -301,9 +389,9 @@
                 <div class="card-projetos">
                     <h3>Biomédica Dhara</h3>
                     <div>
-                        <i class="ri-html5-fill bx orange5 bxl-html5"></i>
+                        <!--<i class="ri-html5-fill bx orange5 bxl-html5"></i>
                         <i class="ri-css3-fill bx blue3 bxl-css3"></i>
-                        <i class="ri-javascript-fill bx bxl-javascript"></i>
+                        <i class="ri-javascript-fill bx bxl-javascript"></i>-->
                     </div>
                     <div class="iphone">
                         <img src="./src/public/assets/img/biomedica_dhara.png" alt="Projeto Biomédica">
@@ -320,8 +408,8 @@
                 <div class="card-projetos">
                     <h3>Portifólio</h3>
                     <div>
-                        <i class="ri-html5-fill bx orange5 bxl-html5"></i>
-                        <i class="ri-css3-fill bx blue3 bxl-css3"></i>
+                        <!--<i class="ri-html5-fill bx orange5 bxl-html5"></i>
+                        <i class="ri-css3-fill bx blue3 bxl-css3"></i>-->
                     </div>
                     <div class="iphone">
                         <img src="./src/public/assets/img/portifolio-teste2.png" alt="Projeto Portifólio teste">
@@ -338,8 +426,8 @@
                 <div class="card-projetos">
                     <h3>Cordel moderno</h3>
                     <div>
-                        <i class="ri-html5-fill bx orange5 bxl-html5"></i>
-                        <i class="ri-css3-fill bx blue3 bxl-css3"></i>
+                        <!--<i class="ri-html5-fill bx orange5 bxl-html5"></i>
+                        <i class="ri-css3-fill bx blue3 bxl-css3"></i>-->
                     </div>
                     <div class="iphone">
                         <img src="./src/public/assets/img/cordel-moderno2.png" alt="Projeto Cordel Moderno">
@@ -356,8 +444,8 @@
                 <div class="card-projetos">
                     <h3>Mascote do Android</h3>
                     <div>
-                        <i class="ri-html5-fill bx orange5 bxl-html5"></i>
-                        <i class="ri-css3-fill bx blue3 bxl-css3"></i>
+                        <!--<i class="ri-html5-fill bx orange5 bxl-html5"></i>
+                        <i class="ri-css3-fill bx blue3 bxl-css3"></i>-->
                     </div>
                     <div class="iphone">
                         <img src="./src/public/assets/img/mascote-android2.png" alt="Projeto Mascote Android">
